--- a/.env.example
+++ b/.env.example
@@ -76,48 +76,8 @@ WEB_URL=http://localhost:3030
 # STEAM_RETURN_URL=https://cad.quokkanetworks.net/api/auth/steam/callback
 # AUTH_COOKIE_SECURE=true
 
-# Radio behavior mode:
-# - external = default; cad_bridge radio routing path for in-game players
-# - legacy  = optional CAD websocket + mumble bridge path
-RADIO_BEHAVIOR=external
-VOICE_BRIDGE_ENABLED=false
-# Legacy-only switch. Set true only when RADIO_BEHAVIOR=legacy.
-# In external mode this flag is ignored (no CAD-managed Mumble bridge).
-
-# External voice transport tokens (Phase 2, no-Mumble path)
-# Provider options: none | livekit | jwt
-EXTERNAL_VOICE_PROVIDER=none
-
-# LiveKit provider settings
-EXTERNAL_VOICE_LIVEKIT_URL=
-EXTERNAL_VOICE_LIVEKIT_API_KEY=
-EXTERNAL_VOICE_LIVEKIT_API_SECRET=
-EXTERNAL_VOICE_LIVEKIT_ROOM_PREFIX=radio-
-EXTERNAL_VOICE_LIVEKIT_TOKEN_TTL_SECONDS=3600
-
-# Generic JWT provider settings (for custom external voice services)
-EXTERNAL_VOICE_JWT_SECRET=
-EXTERNAL_VOICE_JWT_ISSUER=cad-voice
-EXTERNAL_VOICE_JWT_AUDIENCE=external-radio
-EXTERNAL_VOICE_JWT_ROOM_PREFIX=radio-
-EXTERNAL_VOICE_JWT_TOKEN_TTL_SECONDS=3600
-
-# Mumble bridge settings (optional; used when VOICE_BRIDGE_ENABLED=true)
-# MUMBLE_MANAGE=true  -> CAD may spawn rust-mumble.exe from server/murmur/
-# MUMBLE_HOST/MUMBLE_PORT -> host/port CAD bridge connects to
-# MUMBLE_PUBLIC_IP    -> optional public IP hint for legacy setups
-MUMBLE_HOST=127.0.0.1
-MUMBLE_PORT=64738
-MUMBLE_PUBLIC_IP=
-MUMBLE_PASSWORD=
-# Optional comma-separated ACL tokens
-MUMBLE_TOKENS=
-MUMBLE_REJECT_UNAUTHORIZED=false
-# Default false so dispatcher bridge can use normal UDP CryptSetup flow.
-# Set true only as a fallback if CAD connects to a non-local Mumble host.
-# (localhost/127.0.0.1 always uses UDP to avoid CryptSetup reset loops)
-MUMBLE_DISABLE_UDP=false
-MUMBLE_DISPATCHER_NAME_PREFIX=CAD_Dispatcher
+# Keep false to disable legacy cad_bridge radio/voice integration routes.
+CAD_BRIDGE_RADIO_FEATURES_ENABLED=false
 
 # FiveM server path (optional; used for cad_bridge resource auto-sync only)
 # Set this to the folder that contains your FiveM server.cfg.
