--- a/server/fivem-resource/config.cfg
+++ b/server/fivem-resource/config.cfg
@@ -29,30 +29,13 @@ cad_bridge_force_ox_notify_position=true
 cad_bridge_ox_notify_position=center-right
 cad_bridge_ox_notify_force_interval_ms=60000
 
-# Radio (cad-radio adapter)
-cad_bridge_radio_adapter=cad-radio
-cad_bridge_radio_enabled=true
-cad_bridge_radio_target_id=2
-cad_bridge_proximity_target_id=1
-cad_bridge_radio_rx_volume=0.35
-cad_bridge_radio_ptt_key=LMENU
-cad_bridge_radio_follow_native_ptt=true
-cad_bridge_radio_ptt_release_delay_ms=350
-cad_bridge_radio_talking_timeout_ms=6000
-cad_bridge_radio_forward_root=false
-cad_bridge_radio_ui_enabled=true
-cad_bridge_radio_ui_key=EQUALS
-cad_bridge_radio_max_frequency=500
-cad_bridge_radio_overlay=default
-cad_bridge_radio_channel_sync_enabled=true
-cad_bridge_voice_participant_heartbeat_enabled=true
+# Radio/voice integration removed from cad_bridge.
+cad_bridge_radio_enabled=false
+cad_bridge_radio_ui_enabled=false
+cad_bridge_radio_channel_sync_enabled=false
+cad_bridge_voice_participant_heartbeat_enabled=false
 cad_bridge_voice_event_poll_enabled=false
-# External mode only: set false when using legacy voice behavior.
 cad_bridge_external_voice_token_enabled=false
-
-# Optional advanced radio JSON overrides:
-# cad_bridge_radio_names_json={"1":"DISPATCH","2":"VICPOL"}
-# cad_bridge_radio_restricted_channels_json={"2":{"type":"job","name":["police"],"requireDuty":true}}
 
 # License + registration (ped interaction)
 cad_bridge_enable_document_commands=false
