--- a/server/fivem-resource/config.cfg
+++ b/server/fivem-resource/config.cfg
@@ -84,3 +84,6 @@ cad_bridge_jail_command=jail {source} {minutes} {reason}
 # Wraith plate checks
 cad_bridge_wraith_lookup_enabled=true
 cad_bridge_wraith_lookup_cooldown_ms=8000
+cad_bridge_wraith_ignore_emergency_vehicles=true
+cad_bridge_wraith_emergency_plate_prefixes=POLICE,LSPD,LSSD,SAHP,FIRE,EMS,AMBUL
+cad_bridge_wraith_emergency_vehicle_classes=18
