--- a/.env.example
+++ b/.env.example
@@ -98,7 +98,19 @@ API_RATE_LIMIT_SKIP_AUTHENTICATED=true
 FIVEM_RATE_LIMIT_WINDOW_MS=900000
 FIVEM_RATE_LIMIT_MAX=120000
 
-# Live map now uses cad_bridge heartbeat data directly inside CAD (Snaily-style mapping).
+# Live map interface proxy (official live_map-interface frontend -> live_map resource backend)
+# Keep enabled unless you intentionally host config/proxy elsewhere.
+LIVE_MAP_INTEGRATION_ENABLED=true
+# Use CAD-side same-origin proxy endpoints for blips + websocket (recommended for HTTPS CAD deployments).
+LIVE_MAP_USE_PROXY=true
+# Label shown in the live map server dropdown.
+LIVE_MAP_SERVER_NAME=CAD Proxy (Auto)
+# Upstream live_map resource endpoint (usually local FXServer node).
+LIVE_MAP_UPSTREAM_HOST=127.0.0.1
+LIVE_MAP_UPSTREAM_PORT=30121
+# Advanced: override only if your live_map websocket/blips use non-default paths.
+LIVE_MAP_UPSTREAM_SOCKET_PATH=/
+LIVE_MAP_UPSTREAM_BLIPS_PATH=/blips.json
 
 # QBox custom field mappings (optional JSON arrays; can also be set in Admin > System Settings)
 # QBOX_PERSON_CUSTOM_FIELDS=[{"key":"job","source":"charinfo","path":"job.label"}]
