--- a/server/package.json
+++ b/server/package.json
@@ -21,8 +21,7 @@
     "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
     "passport-steam": "^1.0.18",
-    "sharp": "^0.33.5",
-    "ws": "^8.19.0"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
