Added auto call for ambulances if player is detected as Dead

--- a/server/fivem-resource/config.cfg
+++ b/server/fivem-resource/config.cfg
@@ -12,6 +12,10 @@ cad_bridge_fine_poll_ms=7000
 cad_bridge_job_sync_poll_ms=5000
 cad_bridge_route_poll_ms=4000
 cad_bridge_jail_poll_ms=7000
+cad_bridge_auto_ambulance_call_enabled=true
+cad_bridge_auto_ambulance_call_poll_ms=2500
+cad_bridge_auto_ambulance_call_cooldown_ms=180000
+cad_bridge_auto_ambulance_call_priority=1
 
 # Map heartbeat behavior
 cad_bridge_publish_all_players=true
